pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exec-pod2
spec:
  containers:
  - name: exec-container
    image: curlimages/curl:latest
    command:
      - sleep
      - "infinity"
    stdin: true
    tty: true
