envoyfilter.yaml
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: EnvoyFilter
# metadata:
#   name: zstd-compression
#   namespace: istio-system
# spec:
#   configPatches:
#     - applyTo: NETWORK_FILTER
#       match:
#         context: ANY
#         listener:
#           portNumber: 8080
#           filterChain:
#             filter:
#               name: envoy.compression.compressor
#       patch:
#         operation: INSERT_BEFORE
#         value:
#           name: envoy.compression.compressor
#           typed_config:
#             "@type": type.googleapis.com/envoy.extensions.compression.zstd.compressor.v3.Zstd
#             content_type: "application/json"
#             compressor_library:
#               name: envoy.compression.zstd
#               typed_config:
#                 "@type": type.googleapis.com/envoy.extensions.compression.zstd.compressor.v3.Zstd

apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: zstd-outbound-compression
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: "*"  # Apply to all pods with any app label
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.compression.compressor
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.compression.zstd.compressor.v3.Zstd
          defaultSourceCode:
            inlineString: |
              {}
